sobre nosotros agregado

--- a/servicios-web.html
+++ b/servicios-web.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
-    <title>Magnetica - Servicios Web</title>
+    <meta
+      content="Optimice sus comunicaciones empresariales con nuestra plataforma de gestión de comunicaciones integrada. Ofrecemos soluciones personalizadas para mejorar la eficiencia y la conectividad en su organización. Facilitamos la interacción multicanal y garantizamos una comunicación interna fluida y segura. Descubra cómo nuestra tecnología de vanguardia puede transformar la forma en que su empresa se comunica."
+      name="description"
+    />
+    <meta
+      content="Communication management, Business communication solutions, Integrated messaging platform, Efficient internal communication, Multichannel interaction management, Secure connectivity services, Corporate communication optimization"
+      name="keywords"
+    />
+    <title>Magnetica</title>
 
     <script src="assets/js/jquery-3.5.1.min.js"></script>
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="./assets/img/favicon-grande.png" rel="icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -63,19 +69,19 @@
                   Santi
       ------------------------------------- -->
     <!-- -------------------------------------
-                  Módulo 1
+                  Gusti
     ------------------------------------- -->
-    <link rel="stylesheet" href="assets/css/webmodulo1.css" />
+    <link rel="stylesheet" href="./assets/css/homemodulo1.css" />
     <!-- -------------------------------------
-                  Módulo 1
+                  Gusti
     ------------------------------------- -->
 
     <!-- -------------------------------------
-                  Módulo 3
+                  Fabri
     ------------------------------------- -->
-    <link rel="stylesheet" href="assets/css/webmodulo2.css" />
+    <link rel="stylesheet" href="assets/css/homeModulo2.css" />
     <!-- -------------------------------------
-                  Módulo 3
+                  Fabri
     ------------------------------------- -->
   </head>
 
@@ -85,15 +91,23 @@
       <!-- Top bar -->
       <div class="top-bar px-2 row">
         <div class="icon col-3 d-flex justify-content-star">
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-tiktok"></i></a>
+          <a
+            href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
+            ><i class="bi bi-spotify"></i
+          ></a>
+          <a href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+            ><i class="bi bi-tiktok"></i
+          ></a>
           <a href="https://www.youtube.com/@Sofiaaa_ferreyra"
             ><i class="bi bi-youtube"></i
           ></a>
           <a href="https://www.instagram.com/magnetica.comunicacion/"
             ><i class="bi bi-instagram"></i
           ></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+            ><i class="bi bi-linkedin"></i
+          ></a>
         </div>
         <h1 class="col-6">POR UNA VIDA MAGNÉTICA</h1>
         <div class="icon col-3 d-flex justify-content-end">
@@ -177,7 +191,7 @@
                     <a
                       class="dropdown-item m-0 px-2 pt-0 pb-2"
                       href="./copywrite.html"
-                      >Copywriter</a
+                      >Shop express</a
                     >
                   </li>
                 </ul>
@@ -197,15 +211,31 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item m-0 px-2 pt-2 pb-0" href="#"
-                      >Contenido gratis</a
+                    <a
+                      class="dropdown-item m-0 px-2 pt-2 pb-0"
+                      href="https://www.youtube.com/@Sofiaaa_ferreyra"
+                      >YouTube</a
                     >
                   </li>
                   <li>
                     <a
                       class="dropdown-item m-0 px-2 py-0"
-                      href="https://www.youtube.com/@Sofiaaa_ferreyra"
-                      >YouTube</a
+                      href="https://www.instagram.com/magnetica.comunicacion/"
+                      >Instagram</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item m-0 px-2 py-0"
+                      href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                      >LinkedIn</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      class="dropdown-item m-0 px-2 py-0"
+                      href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+                      >Tik tok</a
                     >
                   </li>
                   <li>
@@ -217,27 +247,9 @@
                   </li>
                   <li>
                     <a
-                      class="dropdown-item m-0 px-2 py-0"
+                      class="dropdown-item m-0 px-2 pt-0 pb-2"
                       href="https://elmundodesofia.substack.com"
                       >Blog</a
-                    >
-                  </li>
-                  <li>
-                    <a
-                      class="dropdown-item m-0 px-2 py-0"
-                      href="https://www.instagram.com/magnetica.comunicacion/"
-                      >Instagram</a
-                    >
-                  </li>
-                  <li>
-                    <a class="dropdown-item m-0 px-2 py-0" href="#">Facebook</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item m-0 px-2 py-0" href="#">LinkedIn</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item m-0 px-2 pt-0 pb-2" href="#"
-                      >Tik tok</a
                     >
                   </li>
                 </ul>
@@ -246,7 +258,7 @@
                 <a class="nav-link" href="#contact">CONTACTO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./sobre-magnetica">MAGNÉTICA</a>
+                <a class="nav-link" href="./sobre-magnetica.html">MAGNÉTICA</a>
               </li>
             </ul>
           </div>
@@ -255,7 +267,6 @@
     </header>
     <!-- End navbar -->
     <!-- End Header -->
-
     <main>
       <!-- ======= Banner ======= -->
       <div
@@ -674,7 +685,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
+            <a href="./index.html" class="logo d-flex align-items-center">
               <span>SofiaFerreyra.inc</span>
             </a>
             <p class="py-4">
@@ -682,21 +693,42 @@
               crear un proyecto que cambie tu vida y la de muchos.
             </p>
             <div class="social-links d-flex mt-4">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a
+                href="https://www.instagram.com/magnetica.comunicacion/"
+                class="instagram"
+                ><i class="bi bi-instagram"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                class="linkedin"
+                ><i class="bi bi-linkedin"></i
+              ></a>
+              <a
+                href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
+                class="spotify"
+                ><i class="bi bi-spotify"></i
+              ></a>
+              <a
+                href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+                class="tiktok"
+                ><i class="bi bi-tiktok"></i
+              ></a>
+              <a
+                href="https://www.youtube.com/@Sofiaaa_ferreyra"
+                class="youtube"
+                ><i class="bi bi-youtube"></i
+              ></a>
             </div>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
             <h4>Servicios</h4>
             <ul>
-              <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./servicios-web.html">Diseño web</a></li>
-              <li><a href="./diseño-grafico.html">Identidad visua</a></li>
-              <li><a href="./copywriter">Copywriter </a></li>
+              <li><a href="./diseño-grafico.html">Identidad visual</a></li>
+              <li><a href="./redes-sociales.html">Edición de videos</a></li>
               <li><a href="./redes-sociales.html">Para redes sociales</a></li>
+              <li><a href="./shopify">Shop express </a></li>
               <li><a href="#contacto">Asesorías</a></li>
             </ul>
           </div>
@@ -706,7 +738,7 @@
             <ul>
               <li><a href="https://elmundodesofia.substack.com">Blog</a></li>
               <li><a href="#">Comunidad</a></li>
-              <li><a href="#">Magnética</a></li>
+              <li><a href="./sobre-magnetica.html">Magnética</a></li>
               <li><a href="#contacto">Atención personalizada</a></li>
             </ul>
           </div>
@@ -714,13 +746,12 @@
           <div
             class="col-lg-3 col-md-12 footer-contact text-center text-md-start"
           >
-            <h4>Contact Us</h4>
+            <h4>Contáctanos</h4>
             <p>
-              A108 Adam Street <br />
-              New York, NY 535022<br />
-              United States <br /><br />
-              <strong>Phone:</strong>+54 9 3498 44-4635<br />
-              <strong>Email:</strong>magnetica@gmail.com<br />
+              San Justo, Santa Fe<br />
+              Argentina <br /><br />
+              <strong>Phone:</strong> +54 9 3498 44-4635<br />
+              <strong>Email:</strong> magnetica@gmail.com<br />
             </p>
           </div>
         </div>
@@ -737,14 +768,11 @@
     <!-- End Footer -->
     <!-- Boton de regreso -->
     <a
-      href="/"
+      href="#"
       class="back-to-top border d-flex align-items-center justify-content-center"
       ><i class="bi bi-arrow-up-short"></i
     ></a>
     <!-- End boton de regreso -->
-
-    <!-- Scripts -->
-
     <!-- Vendor JS Files -->
     <script src="assets/terceros/aos/aos.js"></script>
     <script src="assets/terceros/bootstrap/js/bootstrap.bundle.min.js"></script>
