Correccion de links

--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -69,19 +69,18 @@
                   Santi
       ------------------------------------- -->
     <!-- -------------------------------------
-                  Gusti
+                  Módulo 1
     ------------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/homemodulo1.css" />
+    <link rel="stylesheet" href="assets/css/webmodulo1.css" />
     <!-- -------------------------------------
-                  Gusti
+                  Módulo 1
     ------------------------------------- -->
-
     <!-- -------------------------------------
-                  Fabri
+                  Módulo 4
     ------------------------------------- -->
-    <link rel="stylesheet" href="assets/css/homeModulo2.css" />
+    <link rel="stylesheet" href="assets/css/diseñoGraficoModulo4.css" />
     <!-- -------------------------------------
-                  Fabri
+                  Módulo 4
     ------------------------------------- -->
   </head>
 
