--- a/sobre-magnetica.html
+++ b/sobre-magnetica.html
@@ -68,21 +68,6 @@
     <!-- -------------------------------------
                   Santi
       ------------------------------------- -->
-    <!-- -------------------------------------
-                  Gusti
-    ------------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/homemodulo1.css" />
-    <!-- -------------------------------------
-                  Gusti
-    ------------------------------------- -->
-
-    <!-- -------------------------------------
-                  Fabri
-    ------------------------------------- -->
-    <link rel="stylesheet" href="assets/css/homeModulo2.css" />
-    <!-- -------------------------------------
-                  Fabri
-    ------------------------------------- -->
   </head>
 
   <body>
@@ -276,7 +261,7 @@
       ></div>
       <!-- End Banner -->
 
-      <section class="container" id="sobre-magnetica">
+      <section class="container" id="sobre-magnetica" data-aos="fade-up">
         <h1 class="py-1 fst-italic">"Creemos y creamos."</h1>
         <p>
           Holis! Mi nombre es Sofi, hoy quiero invitarte a que conozcas una
