--- a/servicios-web.html
+++ b/servicios-web.html
@@ -69,19 +69,19 @@
                   Santi
       ------------------------------------- -->
     <!-- -------------------------------------
-                  Gusti
+                  Módulo 1
     ------------------------------------- -->
-    <link rel="stylesheet" href="./assets/css/homemodulo1.css" />
+    <link rel="stylesheet" href="assets/css/webmodulo1.css" />
     <!-- -------------------------------------
-                  Gusti
+                  Módulo 1
     ------------------------------------- -->
 
     <!-- -------------------------------------
-                  Fabri
+                  Módulo 3
     ------------------------------------- -->
-    <link rel="stylesheet" href="assets/css/homeModulo2.css" />
+    <link rel="stylesheet" href="assets/css/webmodulo2.css" />
     <!-- -------------------------------------
-                  Fabri
+                  Módulo 3
     ------------------------------------- -->
   </head>
 
