--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -88,38 +88,44 @@
   <body>
     <!-- ======= Header ======= -->
     <header id="header">
-      <!-- Top bar -->
-      <div class="top-bar px-2 row">
-        <div class="icon col-3 d-flex justify-content-star">
-          <a
-            href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
-            ><i class="bi bi-spotify"></i
-          ></a>
-          <a href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
-            ><i class="bi bi-tiktok"></i
-          ></a>
-          <a href="https://www.youtube.com/@Sofiaaa_ferreyra"
-            ><i class="bi bi-youtube"></i
-          ></a>
-          <a href="https://www.instagram.com/magnetica.comunicacion/"
-            ><i class="bi bi-instagram"></i
-          ></a>
-          <a
-            href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-            ><i class="bi bi-linkedin"></i
-          ></a>
-        </div>
-        <h1 class="col-6">POR UNA VIDA MAGNÉTICA</h1>
-        <div class="icon col-3 d-flex justify-content-end">
-          <a class="rounded-0 m-0" href=""
-            ><i class="bi bi-cart-fill px-3"></i
-          ></a>
-          <a class="rounded-0" href=""
-            ><i class="bi bi-person-fill px-3"></i
-          ></a>
-        </div>
-      </div>
-      <!-- End Top Bar -->
+ <!-- Top bar -->
+ <div class="top-bar px-2 row">
+  <div class="icon col-3 d-flex justify-content-star">
+    <a
+      href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
+      target="_blank"
+      ><i class="bi bi-spotify"></i
+    ></a>
+    <a
+      href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+      target="_blank"
+      ><i class="bi bi-tiktok"></i
+    ></a>
+    <a href="https://www.youtube.com/@Sofiaaa_ferreyra" target="_blank"
+      ><i class="bi bi-youtube"></i
+    ></a>
+    <a
+      href="https://www.instagram.com/magnetica.comunicacion/"
+      target="_blank"
+      ><i class="bi bi-instagram"></i
+    ></a>
+    <a
+      href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+      target="_blank"
+      ><i class="bi bi-linkedin"></i
+    ></a>
+  </div>
+  <h1 class="col-6">POR UNA VIDA MAGNÉTICA</h1>
+  <div class="icon col-3 d-flex justify-content-end">
+    <a class="rounded-0 m-0" href=""
+      ><i class="bi bi-cart-fill px-3"></i
+    ></a>
+    <a class="rounded-0" href=""
+      ><i class="bi bi-person-fill px-3"></i
+    ></a>
+  </div>
+</div>
+<!-- End Top Bar -->
       <!-- ======= navbar ======= -->
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
@@ -559,10 +565,10 @@
       </section>
       <!-- Fin de Testimonios -->
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact mb-5 text-center">
+      <section id="contact" class="contact mb-5">
         <div class="container mt-2" data-aos="fade-up">
           <div class="section-header">
-            <h2 class="py-5" style="color: #941f20">Atención personalizada</h2>
+            <h2 class="py-5 text-center" style="color: #941f20">Atención personalizada</h2>
           </div>
           <div class="row gx-lg-0 gy-4">
             <div class="col-lg-4">
@@ -590,19 +596,23 @@
                 <div class="info-item d-flex">
                   <i class="bi bi-phone flex-shrink-0"></i>
                   <div>
-                    <h4>Cel.:</h4>
+                    <h4>Teléfono:</h4>
                     <p>+54 9 3498 44-4635</p>
                   </div>
                 </div>
                 <!-- End Info Item -->
 
-                <div class="info-item d-flex">
-                  <i class="bi bi-clock flex-shrink-0"></i>
+                <a
+                  href="https://wa.me/5493498444635"
+                  target="_blank"
+                  class="info-item d-flex"
+                >
+                  <i class="bi bi-whatsapp flex-shrink-0"></i>
                   <div>
-                    <h4>Open Hours:</h4>
-                    <p>Mon-Sat: 11AM - 23PM</p>
+                    <h4>WhatsApp:</h4>
+                    <p>+54 9 3498 44-4635</p>
                   </div>
-                </div>
+                </a>
                 <!-- End Info Item -->
               </div>
             </div>
@@ -751,92 +761,101 @@
       <!-- End Contact Section -->
     </main>
 
-<!-- ======= Footer ======= -->
-<footer id="footer" class="footer">
-  <div class="container">
-    <div class="row gy-4">
-      <div class="col-lg-5 col-md-12 footer-info">
-        <a href="./index.html" class="logo d-flex align-items-center">
-          <span>SofiaFerreyra.inc</span>
-        </a>
-        <p class="py-4">
-          Por una vida Magnética. Ya no hay excusas para tomar las riendas y
-          crear un proyecto que cambie tu vida y la de muchos.
-        </p>
-        <div class="social-links d-flex mt-4">
-          <a
-            href="https://www.instagram.com/magnetica.comunicacion/"
-            class="instagram"
-            ><i class="bi bi-instagram"></i
-          ></a>
-          <a
-            href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-            class="linkedin"
-            ><i class="bi bi-linkedin"></i
-          ></a>
-          <a
-            href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
-            class="spotify"
-            ><i class="bi bi-spotify"></i
-          ></a>
-          <a
-            href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
-            class="tiktok"
-            ><i class="bi bi-tiktok"></i
-          ></a>
-          <a
-            href="https://www.youtube.com/@Sofiaaa_ferreyra"
-            class="youtube"
-            ><i class="bi bi-youtube"></i
-          ></a>
+    <!-- ======= Footer ======= -->
+    <footer id="footer" class="footer">
+      <div class="container">
+        <div class="row gy-4">
+          <div class="col-lg-5 col-md-12 footer-info">
+            <a href="./index.html" class="logo d-flex align-items-center">
+              <span>SofiaFerreyra.inc</span>
+            </a>
+            <p class="py-4">
+              Por una vida Magnética. Ya no hay excusas para tomar las riendas y
+              crear un proyecto que cambie tu vida y la de muchos.
+            </p>
+            <div class="social-links d-flex mt-4">
+              <a
+                href="https://www.instagram.com/magnetica.comunicacion/"
+                target="_blank"
+                class="instagram"
+                ><i class="bi bi-instagram"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                target="_blank"
+                class="linkedin"
+                ><i class="bi bi-linkedin"></i
+              ></a>
+              <a
+                href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
+                target="_blank"
+                class="spotify"
+                ><i class="bi bi-spotify"></i
+              ></a>
+              <a
+                href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+                target="_blank"
+                class="tiktok"
+                ><i class="bi bi-tiktok"></i
+              ></a>
+              <a
+                href="https://www.youtube.com/@Sofiaaa_ferreyra"
+                target="_blank"
+                class="youtube"
+                ><i class="bi bi-youtube"></i
+              ></a>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-6 footer-links">
+            <h4>Servicios</h4>
+            <ul>
+              <li><a href="./servicios-web.html">Diseño web</a></li>
+              <li><a href="./diseño-grafico.html">Identidad visual</a></li>
+              <li><a href="./redes-sociales.html">Edición de videos</a></li>
+              <li><a href="./redes-sociales.html">Para redes sociales</a></li>
+              <li><a href="./shopify">Shop express </a></li>
+              <li><a href="#contacto">Asesorías</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-2 col-6 footer-links">
+            <h4>Home</h4>
+            <ul>
+              <li>
+                <a href="https://elmundodesofia.substack.com" target="_blank"
+                  >Blog</a
+                >
+              </li>
+              <li><a href="#">Comunidad</a></li>
+              <li><a href="./sobre-magnetica.html">Magnética</a></li>
+              <li><a href="#contacto">Atención personalizada</a></li>
+            </ul>
+          </div>
+
+          <div
+            class="col-lg-3 col-md-12 footer-contact text-center text-md-start"
+          >
+            <h4>Contáctanos</h4>
+            <p>
+              San Justo, Santa Fe<br />
+              Argentina <br /><br />
+              <strong>Teléfono:</strong> +54 9 3498 44-4635<br />
+              <strong>Email:</strong> magnetica@gmail.com<br />
+            </p>
+          </div>
         </div>
       </div>
 
-      <div class="col-lg-2 col-6 footer-links">
-        <h4>Servicios</h4>
-        <ul>
-          <li><a href="./servicios-web.html">Diseño web</a></li>
-          <li><a href="./diseño-grafico.html">Identidad visual</a></li>
-          <li><a href="./redes-sociales.html">Edición de videos</a></li>
-          <li><a href="./redes-sociales.html">Para redes sociales</a></li>
-          <li><a href="./shopify">Shop express </a></li>
-          <li><a href="#contacto">Asesorías</a></li>
-        </ul>
+      <div class="container mt-4">
+        <div class="copyright">
+          &copy; Copyright <strong><span>SofiaFerreyra.inc</span></strong
+          >. All Rights Reserved
+        </div>
+        <div class="credits">Designed by SofiaFerreyra.inc</div>
       </div>
-
-      <div class="col-lg-2 col-6 footer-links">
-        <h4>Home</h4>
-        <ul>
-          <li><a href="https://elmundodesofia.substack.com">Blog</a></li>
-          <li><a href="#">Comunidad</a></li>
-          <li><a href="./sobre-magnetica.html">Magnética</a></li>
-          <li><a href="#contacto">Atención personalizada</a></li>
-        </ul>
-      </div>
-
-      <div
-        class="col-lg-3 col-md-12 footer-contact text-center text-md-start"
-      >
-        <h4>Contáctanos</h4>
-        <p>
-          San Justo, Santa Fe<br />
-          Argentina <br /><br />
-          <strong>Phone:</strong> +54 9 3498 44-4635<br />
-          <strong>Email:</strong> magnetica@gmail.com<br />
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <div class="container mt-4">
-    <div class="copyright">
-      &copy; Copyright <strong><span>SofiaFerreyra.inc</span></strong
-      >. All Rights Reserved
-    </div>
-    <div class="credits">Designed by SofiaFerreyra.inc</div>
-  </div>
-</footer>
-<!-- End Footer -->
+    </footer>
+    <!-- End Footer -->
 <!-- Boton de regreso -->
 <a
   href="#"
