--- a/sobre-magnetica.html
+++ b/sobre-magnetica.html
@@ -78,19 +78,25 @@
         <div class="icon col-3 d-flex justify-content-star">
           <a
             href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
+            target="_blank"
             ><i class="bi bi-spotify"></i
           ></a>
-          <a href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+          <a
+            href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+            target="_blank"
             ><i class="bi bi-tiktok"></i
           ></a>
-          <a href="https://www.youtube.com/@Sofiaaa_ferreyra"
+          <a href="https://www.youtube.com/@Sofiaaa_ferreyra" target="_blank"
             ><i class="bi bi-youtube"></i
           ></a>
-          <a href="https://www.instagram.com/magnetica.comunicacion/"
+          <a
+            href="https://www.instagram.com/magnetica.comunicacion/"
+            target="_blank"
             ><i class="bi bi-instagram"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+            target="_blank"
             ><i class="bi bi-linkedin"></i
           ></a>
         </div>
@@ -327,26 +333,31 @@
             <div class="social-links d-flex mt-4">
               <a
                 href="https://www.instagram.com/magnetica.comunicacion/"
+                target="_blank"
                 class="instagram"
                 ><i class="bi bi-instagram"></i
               ></a>
               <a
                 href="https://www.linkedin.com/in/magn%C3%A9tica-comunicaci%C3%B3n-72b031297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                target="_blank"
                 class="linkedin"
                 ><i class="bi bi-linkedin"></i
               ></a>
               <a
                 href="https://open.spotify.com/show/4fWLZjWRWkMEePF9f13qzJ?si=50b0498b90674e51"
+                target="_blank"
                 class="spotify"
                 ><i class="bi bi-spotify"></i
               ></a>
               <a
                 href="https://www.tiktok.com/@sofiaaa_ferreyra?_t=8gknxcfsirV&_r=1"
+                target="_blank"
                 class="tiktok"
                 ><i class="bi bi-tiktok"></i
               ></a>
               <a
                 href="https://www.youtube.com/@Sofiaaa_ferreyra"
+                target="_blank"
                 class="youtube"
                 ><i class="bi bi-youtube"></i
               ></a>
@@ -368,7 +379,11 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Home</h4>
             <ul>
-              <li><a href="https://elmundodesofia.substack.com">Blog</a></li>
+              <li>
+                <a href="https://elmundodesofia.substack.com" target="_blank"
+                  >Blog</a
+                >
+              </li>
               <li><a href="#">Comunidad</a></li>
               <li><a href="./sobre-magnetica.html">Magnética</a></li>
               <li><a href="#contacto">Atención personalizada</a></li>
@@ -382,7 +397,7 @@
             <p>
               San Justo, Santa Fe<br />
               Argentina <br /><br />
-              <strong>Phone:</strong> +54 9 3498 44-4635<br />
+              <strong>Teléfono:</strong> +54 9 3498 44-4635<br />
               <strong>Email:</strong> magnetica@gmail.com<br />
             </p>
           </div>
