--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
       <!-- ======= Our Services Section ======= -->
       <section id="services" class="services sections-bg">
         <div class="container" data-aos="fade-up">
-          <div class="service-title">
-            <h2>Nuestros Servicios</h2>
+          <div>
+            <h1 class="titles-h1">Nuestros Servicios</h1>
           </div>
 
           <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
@@ -442,7 +442,7 @@
       <!-- ======= Testimonios ======= -->
       <section id="clients" class="clients">
         <div data-aos="fade-up">
-          <h1 class="title">Testimonios</h1>
+          <h1 class="titles-h1">Testimonios</h1>
         </div>
         <div class="container" data-aos="fade-up">
           <div class="clients-slider swiper">
@@ -526,7 +526,7 @@
       <!-- ======= FAQ ======= -->
       <section id="faq" class="faq section-bg">
         <div data-aos="fade-up">
-          <h1 class="title">Preguntas frecuentes</h1>
+          <h1 class="titles-h1">Preguntas frecuentes</h1>
         </div>
         <div class="faq-list">
           <ul>
@@ -617,11 +617,11 @@
       <!-- ======= End FAQ ======= -->
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact mb-5">
-        <div class="container mt-2" data-aos="fade-up">
+        <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h2 class="py-5 text-center" style="color: #941f20">
+            <h1 class="titles-h1" style="color: #941f20">
               Atención personalizada
-            </h2>
+            </h1>
           </div>
           <div class="row gx-lg-0 gy-4">
             <div class="col-lg-4">
