--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -453,7 +453,7 @@
       <!-- portfolio slider -->
       <section id="clients" class="clients my-5">
         <div data-aos="fade-up">
-          <h2 class="title">Portfolio</h2>
+          <h1 class="titles-h1">Portfolio</h1>
         </div>
         <div class="container" data-aos="fade-up">
           <div class="clients-slider swiper">
@@ -526,7 +526,7 @@
 
       <!-- Testimonios -->
       <section class="testimonios-section my-5">
-        <h1 data-aos="fade-up" class="testimonios-title">Testimonios</h1>
+        <h1 data-aos="fade-up" class="titles-h1">Testimonios</h1>
         <p data-aos="fade-up">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
           nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
@@ -566,9 +566,9 @@
       <!-- Fin de Testimonios -->
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact mb-5">
-        <div class="container mt-2" data-aos="fade-up">
+        <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h2 class="py-5 text-center" style="color: #941f20">Atención personalizada</h2>
+            <h2 class="titles-h1" style="color: #941f20">Atención personalizada</h2>
           </div>
           <div class="row gx-lg-0 gy-4">
             <div class="col-lg-4">
