--- a/servicios-web.html
+++ b/servicios-web.html
@@ -381,7 +381,7 @@
       <!-- portfolio slider -->
       <section id="clients" class="clients">
         <div data-aos="fade-up">
-          <h2 class="title">Portfolio</h2>
+          <h1 class="titles-h1">Portfolio</h1>
         </div>
         <div class="container" data-aos="fade-up">
           <div class="clients-slider swiper">
@@ -455,7 +455,7 @@
       <!-- Testimonios -->
 
       <section class="testimonios-section">
-        <h1 data-aos="fade-up" class="testimonios-title">Testimonios</h1>
+        <h1 data-aos="fade-up" class="titles-h1">Testimonios</h1>
         <p data-aos="fade-up">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
           nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
@@ -495,11 +495,11 @@
       <!-- Fin de Testimonios -->
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact mb-5">
-        <div class="container mt-2" data-aos="fade-up">
+        <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h2 class="py-5 text-center" style="color: #941f20">
+            <h1 class="titles-h1" style="color: #941f20">
               Atención personalizada
-            </h2>
+            </h1>
           </div>
           <div class="row gx-lg-0 gy-4">
             <div class="col-lg-4">
