--- a/index.html
+++ b/index.html
@@ -318,7 +318,9 @@
       <section id="services" class="services sections-bg">
         <div class="container" data-aos="fade-up">
           <div>
-            <h1 class="titles-h1">Nuestros Servicios</h1>
+            <h1 class="titles-h1">
+              <span class="underline">Nuestros Servicios</span>
+            </h1>
           </div>
 
           <div class="row gy-4" data-aos="fade-up" data-aos-delay="100">
@@ -442,7 +444,7 @@
       <!-- ======= Testimonios ======= -->
       <section id="clients" class="clients">
         <div data-aos="fade-up">
-          <h1 class="titles-h1">Testimonios</h1>
+          <h1 class="titles-h1"><span class="underline">Testimonios</span></h1>
         </div>
         <div class="container" data-aos="fade-up">
           <div class="clients-slider swiper">
@@ -526,7 +528,9 @@
       <!-- ======= FAQ ======= -->
       <section id="faq" class="faq section-bg">
         <div data-aos="fade-up">
-          <h1 class="titles-h1">Preguntas frecuentes</h1>
+          <h1 class="titles-h1">
+            <span class="underline">Preguntas frecuentes</span>
+          </h1>
         </div>
         <div class="faq-list">
           <ul>
@@ -619,8 +623,8 @@
       <section id="contact" class="contact mb-5">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h1 class="titles-h1" style="color: #941f20">
-              Atención personalizada
+            <h1 class="titles-h1">
+              <span class="underline">Atención personalizada</span>
             </h1>
           </div>
           <div class="row gx-lg-0 gy-4">
