--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -490,7 +490,7 @@
       <!-- Portfolio -->
       <section id="clients" class="clients">
         <div data-aos="fade-up">
-          <h1 class="titles-h1">Portfolio</h1>
+          <h1 class="titles-h1"><span class="underline">Portfolio</span></h1>
         </div>
         <div class="container" data-aos="fade-up">
           <div class="clients-slider swiper">
@@ -582,7 +582,9 @@
       <!-- Testimonios -->
 
       <section class="testimonios-section">
-        <h1 data-aos="fade-up" class="titles-h1">Testimonios</h1>
+        <h1 data-aos="fade-up" class="titles-h1">
+          <span class="underline">Testimonios</span>
+        </h1>
         <p data-aos="fade-up">
           Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
           nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat
@@ -626,8 +628,8 @@
       <section id="contact" class="contact mb-5">
         <div class="container" data-aos="fade-up">
           <div class="section-header">
-            <h1 class="titles-h1" style="color: #941f20">
-              Atención personalizada
+            <h1 class="titles-h1">
+              <span class="underline">Atención personalizada</span>
             </h1>
           </div>
           <div class="row gx-lg-0 gy-4">
