--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -825,7 +825,7 @@
       <!-- fin del portfolio slider -->
 
       <!-- Testimonios -->
-      <section class="testimonios-section">
+      <section class="testimonios-section my-5">
         <h1 data-aos="fade-up" class="titles-h1">Testimonios</h1>
         <p data-aos="fade-up">
           Queremos agradecerles a todas las personas que ya nos eligieron
@@ -833,26 +833,51 @@
         <div data-aos="fade-up" class="container text-center">
           <div class="row justify-content-center">
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-              <iframe width="100%" height="250px" src="https://www.youtube.com/embed/R_HynDfavIk?si=2MHO8cKjTUtn12ID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/R_HynDfavIk?si=2MHO8cKjTUtn12ID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-              <iframe width="100%" height="250px" src="https://www.youtube.com/embed/XGhLI4nWtig?si=LmaYBQ8T1R-RSrJb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <iframe width="100%" height="250vh"  src="https://www.youtube.com/embed/XGhLI4nWtig?si=LmaYBQ8T1R-RSrJb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            
             <div class="w-100"></div>
 
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-              <iframe width="100%" height="250px" src="https://www.youtube.com/embed/R_HynDfavIk?si=2MHO8cKjTUtn12ID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+              <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/cpTtByHtDnE?si=rqr2xHbqIrBuPU1U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-              <iframe width="100%" height="250px" src="https://www.youtube.com/embed/R_HynDfavIk?si=2MHO8cKjTUtn12ID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
             </div>
           </div>
         </div>
       </section>
       <!-- Fin de Testimonios -->
+      <!-- slider detras de escena -->
+      <section id="clients" class="clients">
+        <div data-aos="fade-up">
+          <h1 class="titles-h1">Detrás de escena</h1>
+        </div>
+        <div class="container" data-aos="fade-up">
+          <div class="camera-slider swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div>
+                  <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/V019nDqLgUI?si=sObLLf1FigRxizje" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/RSKA42_hX5Q?si=iFrIqwvMKq9O4cjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/vhmaNg5fwHo?si=0IeIKG5cD5cqcucd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+      <!-- fin slider detras de escena -->
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact mb-5">
         <div class="container" data-aos="fade-up">
