--- a/index.html
+++ b/index.html
@@ -562,7 +562,8 @@
               <a
                 data-bs-toggle="collapse"
                 class="collapse"
-                data-bs-target="#faq-list-1">
+                data-bs-target="#faq-list-1"
+              >
                 ¿Qué puedo esperar de Magnética?
                 <i class="bx bx-chevron-down icon-show"></i>
                 <i class="bx bx-chevron-up icon-close"></i>
@@ -570,14 +571,16 @@
               <div
                 id="faq-list-1"
                 class="collapse show"
-                data-bs-parent=".faq-list">
+                data-bs-parent=".faq-list"
+              >
                 <p class="big-p">
                   - Tener todo lo que tu empresa necesita en una sola agencia
                 </p>
                 <p class="general-p">
-                  Somos el área de comunicación que le hace falta a su empresa, nuestra visión
-                  integral posibilita un trabajo en conjunto, profesional, en donde usted ahorra
-                  tiempo y se dedica a esa parte de su empresa que tanto le gusta.
+                  Somos el área de comunicación que le hace falta a su empresa,
+                  nuestra visión integral posibilita un trabajo en conjunto,
+                  profesional, en donde usted ahorra tiempo y se dedica a esa
+                  parte de su empresa que tanto le gusta.
                 </p>
               </div>
             </li>
@@ -587,14 +590,16 @@
               <a
                 data-bs-toggle="collapse"
                 data-bs-target="#faq-list-2"
-                class="collapsed">
+                class="collapsed"
+              >
                 ¿Brindan servicios para clientes internacionales?
                 <i class="bx bx-chevron-down icon-show"></i>
                 <i class="bx bx-chevron-up icon-close"></i>
               </a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p class="general-p">
-                  Si, estamos preparados para trabajar con proyectos a nivel mundial
+                  Si, estamos preparados para trabajar con proyectos a nivel
+                  mundial
                 </p>
               </div>
             </li>
@@ -604,15 +609,17 @@
               <a
                 data-bs-toggle="collapse"
                 data-bs-target="#faq-list-3"
-                class="collapsed">
+                class="collapsed"
+              >
                 ¿Dónde encuentro contenido gratuito?
                 <i class="bx bx-chevron-down icon-show"></i>
                 <i class="bx bx-chevron-up icon-close"></i>
               </a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p class="general-p">
-                  Suscríbete a nuestra comunidad y enterate de todas las novedades. Podés
-                  encontrar todo el material en el menú “Comunidad”
+                  Suscríbete a nuestra comunidad y enterate de todas las
+                  novedades. Podés encontrar todo el material en el menú
+                  “Comunidad”
                 </p>
               </div>
             </li>
@@ -622,14 +629,18 @@
               <a
                 data-bs-toggle="collapse"
                 data-bs-target="#faq-list-4"
-                class="collapsed">
-                Quiero varios servicios, ¿Dónde puedo comprarlos?<i class="bx bx-chevron-down icon-show"></i>
+                class="collapsed"
+              >
+                Quiero varios servicios, ¿Dónde puedo comprarlos?<i
+                  class="bx bx-chevron-down icon-show"
+                ></i>
                 <i class="bx bx-chevron-up icon-close"></i>
               </a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p class="general-p">
-                  Completá el formulario y uno de nuestros asesores se contactará con usted
-                  de inmediato para que podamos agendar una reunión personalizada :)
+                  Completá el formulario y uno de nuestros asesores se
+                  contactará con usted de inmediato para que podamos agendar una
+                  reunión personalizada :)
                 </p>
               </div>
             </li>
@@ -743,36 +754,36 @@
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 1"
+                            value="Diseño Web"
                             name="servicios[]"
                             id="Servicio1"
                           />
                           <label class="form-check-label" for="Servicio1">
-                            Pagina Web 1
+                            Diseño Web
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 2"
+                            value="Identidad Visual"
                             name="servicios[]"
                             id="Servicio2"
                           />
                           <label class="form-check-label" for="Servicio2">
-                            Pagina Web 2
+                            Identidad Visual
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 3"
+                            value="Edición de video"
                             name="servicios[]"
                             id="Servicio3"
                           />
                           <label class="form-check-label" for="Servicio3">
-                            Pagina Web 3
+                            Edición de video
                           </label>
                         </div>
                       </div>
@@ -781,36 +792,62 @@
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 4"
+                            value="Diseño para redes sociales"
                             name="servicios[]"
                             id="Servicio4"
                           />
                           <label class="form-check-label" for="Servicio4">
-                            Pagina Web 4
+                            Diseño para redes sociales
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 5"
+                            value="Gestión para redes sociales"
                             name="servicios[]"
                             id="Servicio5"
                           />
                           <label class="form-check-label" for="Servicio5">
-                            Pagina Web 5
+                            Gestión para redes sociales
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 6"
+                            value="Copywriter"
                             name="servicios[]"
                             id="Servicio6"
                           />
                           <label class="form-check-label" for="Servicio6">
-                            Pagina Web 6
+                            Copywriter
+                          </label>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-check">
+                          <input
+                            class="form-check-input"
+                            type="checkbox"
+                            value="Asesorías y Mentorías"
+                            name="servicios[]"
+                            id="Servicio4"
+                          />
+                          <label class="form-check-label" for="Servicio4">
+                            Asesorías y Mentorías
+                          </label>
+                        </div>
+                        <div class="form-check">
+                          <input
+                            class="form-check-input"
+                            type="checkbox"
+                            value="Otros"
+                            name="servicios[]"
+                            id="Servicio5"
+                          />
+                          <label class="form-check-label" for="Servicio5">
+                            Otros
                           </label>
                         </div>
                       </div>
