--- a/servicios-web.html
+++ b/servicios-web.html
@@ -801,36 +801,36 @@
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 1"
+                            value="Diseño Web"
                             name="servicios[]"
                             id="Servicio1"
                           />
                           <label class="form-check-label" for="Servicio1">
-                            Pagina Web 1
+                            Diseño Web
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 2"
+                            value="Identidad Visual"
                             name="servicios[]"
                             id="Servicio2"
                           />
                           <label class="form-check-label" for="Servicio2">
-                            Pagina Web 2
+                            Identidad Visual
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 3"
+                            value="Edición de video"
                             name="servicios[]"
                             id="Servicio3"
                           />
                           <label class="form-check-label" for="Servicio3">
-                            Pagina Web 3
+                            Edición de video
                           </label>
                         </div>
                       </div>
@@ -839,36 +839,62 @@
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 4"
+                            value="Diseño para redes sociales"
                             name="servicios[]"
                             id="Servicio4"
                           />
                           <label class="form-check-label" for="Servicio4">
-                            Pagina Web 4
+                            Diseño para redes sociales
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 5"
+                            value="Gestión para redes sociales"
                             name="servicios[]"
                             id="Servicio5"
                           />
                           <label class="form-check-label" for="Servicio5">
-                            Pagina Web 5
+                            Gestión para redes sociales
                           </label>
                         </div>
                         <div class="form-check">
                           <input
                             class="form-check-input"
                             type="checkbox"
-                            value="Pagina Web 6"
+                            value="Copywriter"
                             name="servicios[]"
                             id="Servicio6"
                           />
                           <label class="form-check-label" for="Servicio6">
-                            Pagina Web 6
+                            Copywriter
+                          </label>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-check">
+                          <input
+                            class="form-check-input"
+                            type="checkbox"
+                            value="Asesorías y Mentorías"
+                            name="servicios[]"
+                            id="Servicio4"
+                          />
+                          <label class="form-check-label" for="Servicio4">
+                            Asesorías y Mentorías
+                          </label>
+                        </div>
+                        <div class="form-check">
+                          <input
+                            class="form-check-input"
+                            type="checkbox"
+                            value="Otros"
+                            name="servicios[]"
+                            id="Servicio5"
+                          />
+                          <label class="form-check-label" for="Servicio5">
+                            Otros
                           </label>
                         </div>
                       </div>
