detras de escena

--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -775,7 +775,9 @@
       <!-- detras de escena -->
       <section id="clients" class="clients">
         <div data-aos="fade-up">
-          <h1 class="titles-h1">Detrás de escena</h1>
+          <h1 class="titles-h1">
+            <span class="underline">Detrás de escena</span>
+          </h1>
         </div>
         <div class="container" data-aos="fade-up">
           <div class="camera-slider swiper">
