Agrega imagen del medio

--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
       </section>
       <!-- End Our Services Section -->
 
-      <!-- ======= Banner Section ======= -->
+      <!-- ======= Segundo Banner ======= -->
       <div
-        id="banner-mid"
-        class="d-flex flex-column justify-content-center align-items-center"
-        style="margin-bottom: 0px; background-color: gray"
+        id="ImaMid"
+        class="ima-ini d-flex flex-column justify-content-center align-items-center"
+        style="margin-bottom: 0px"
       ></div>
-      <!-- End Banner Section -->
+      <!-- End Segundo Banner -->
 
       <!-- ======= Testimonios ======= -->
       <section id="clients" class="clients">
