--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -77,11 +77,11 @@
     ------------------------------------- -->
 
     <!-- -------------------------------------
-                  Módulo 3
+                  Módulo 2
     ------------------------------------- -->
     <link rel="stylesheet" href="assets/css/webmodulo2.css" />
     <!-- -------------------------------------
-                  Módulo 3
+                  Módulo 2
     ------------------------------------- -->
   </head>
 
@@ -616,12 +616,12 @@
               <div class="swiper-slide">
                 <div class="portfolio-card">
                   <a
-                    href="assets/img/portfolios/impresion-final/PROYECTO-la-ciudad-es-nuestraGULAJULIO-2023.png"
+                    href="assets/img/portfolios/portfolio-redes-sociales/la-ciudad-es-nuestra/PROYECTO-la-ciudad-es-nuestraGULAJULIO-20232.png"
                     data-gallery="portfolio4Gallery"
                     class="portfolio-lightbox preview-link"
                   >
                     <img
-                      src="assets/img/portfolios/impresion-final/PROYECTO-la-ciudad-es-nuestraGULAJULIO-2023.png"
+                      src="assets/img/portfolios/portfolio-redes-sociales/la-ciudad-es-nuestra/PROYECTO-la-ciudad-es-nuestraGULAJULIO-20232.png"
                       alt=""
                     />
                       <h3 class="portfolio-title">Cuadríptico</h3>
@@ -761,15 +761,39 @@
         <div data-aos="fade-up" class="container text-center">
           <div class="row justify-content-center">
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-              <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/R_HynDfavIk?si=2MHO8cKjTUtn12ID" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <a
+                    href="https://www.youtube.com/embed/R_HynDfavIk?si=2MHO8cKjTUtn12ID"
+                    data-gallery="testimonioGallery"
+                    class="portfolio-lightbox preview-link"
+                  >
+                  <img src="assets/img/testimonios/Testimonio-Delia.png" 
+                  class="zoom-imagen" 
+                  alt="">
+              </a>
             </div>
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-              <iframe width="100%" height="250vh"  src="https://www.youtube.com/embed/XGhLI4nWtig?si=LmaYBQ8T1R-RSrJb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <a
+                    href="https://www.youtube.com/embed/XGhLI4nWtig?si=LmaYBQ8T1R-RSrJb"
+                    data-gallery="testimonioGallery"
+                    class="portfolio-lightbox preview-link"
+                  >
+                  <img src="assets/img/testimonios/Testimonio-FrancoMai.png" 
+                  class="zoom-imagen"
+                  alt="">
+              </a>
             </div>
             <div class="w-100"></div>
 
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-              <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/cpTtByHtDnE?si=rqr2xHbqIrBuPU1U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              <a
+                    href="https://www.youtube.com/embed/cpTtByHtDnE?si=rqr2xHbqIrBuPU1U"
+                    data-gallery="testimonioGallery"
+                    class="portfolio-lightbox preview-link"
+                  >
+                  <img src="assets/img/testimonios/TestimonioCarenOrtiz.png" 
+                  class="zoom-imagen" 
+                  alt="">
+              </a>
             </div>
             <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
             </div>
@@ -781,25 +805,43 @@
       <section id="clients" class="clients">
         <div data-aos="fade-up">
           <h1 class="titles-h1">
-            <span class="underline">Atención personalizada</span>
+            <span class="underline">Detrás de escena</span>
           </h1>
         </div>
         <div class="container" data-aos="fade-up">
           <div class="camera-slider swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div>
-                  <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/V019nDqLgUI?si=sObLLf1FigRxizje" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="behind-cameras-img">
+                  <a
+                    href="https://www.youtube.com/embed/V019nDqLgUI?si=sObLLf1FigRxizje"
+                    data-gallery="detrasDeCamaraGallery"
+                    class="portfolio-lightbox preview-link"
+                  >
+                  <img width="100%" height="100%" src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" alt="">
+                  </a>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div>
-                  <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/RSKA42_hX5Q?si=iFrIqwvMKq9O4cjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="behind-cameras-img">
+                  <a
+                    href="https://www.youtube.com/embed/vhmaNg5fwHo?si=0IeIKG5cD5cqcucd"
+                    data-gallery="detrasDeCamaraGallery"
+                    class="portfolio-lightbox preview-link"
+                  >
+                  <img width="100%" height="100%" src="assets/img/testimonios/Sin-título-2-[Recuperado].png" alt="">
+                  </a>
                 </div>
               </div>
               <div class="swiper-slide">
-                <div>
-                  <iframe width="100%" height="250vh" src="https://www.youtube.com/embed/vhmaNg5fwHo?si=0IeIKG5cD5cqcucd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="behind-cameras-img">
+                  <a
+                    href="https://www.youtube.com/embed/vhmaNg5fwHo?si=0IeIKG5cD5cqcucd"
+                    data-gallery="detrasDeCamaraGallery"
+                    class="portfolio-lightbox preview-link"
+                  >
+                  <img width="100%" height="100%" src="assets/img/testimonios/Sin-título-2-[Recuperado].png" alt="">
+                  </a>
                 </div>
               </div>
             </div>
