--- a/diseño-grafico.html
+++ b/diseño-grafico.html
@@ -908,7 +908,10 @@
                     data-gallery="detrasDeCamaraGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img width="100%" height="100%" src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" alt="">
+                  <img width="100%" height="100%" 
+                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" 
+                  class="zoom-imagen"
+                  alt="">
                   </a>
                 </div>
               </div>
@@ -919,7 +922,10 @@
                     data-gallery="detrasDeCamaraGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img width="100%" height="100%" src="assets/img/testimonios/Sin-título-2-[Recuperado].png" alt="">
+                  <img width="100%" height="100%" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
+                  class="zoom-imagen"
+                  alt="">
                   </a>
                 </div>
               </div>
@@ -930,7 +936,10 @@
                     data-gallery="detrasDeCamaraGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img width="100%" height="100%" src="assets/img/testimonios/Sin-título-2-[Recuperado].png" alt="">
+                  <img width="100%" height="100%" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
+                  class="zoom-imagen"
+                  alt="">
                   </a>
                 </div>
               </div>
