--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -818,7 +818,10 @@
                     data-gallery="detrasDeCamaraGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img width="100%" height="100%" src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" alt="">
+                  <img width="100%" height="100%" 
+                  src="assets/img/testimonios/Vlogcreandocontenidoenfitnesskig4.png" 
+                  class="zoom-imagen"
+                  alt="">
                   </a>
                 </div>
               </div>
@@ -829,7 +832,10 @@
                     data-gallery="detrasDeCamaraGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img width="100%" height="100%" src="assets/img/testimonios/Sin-título-2-[Recuperado].png" alt="">
+                  <img width="100%" height="100%" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
+                  class="zoom-imagen"
+                  alt="">
                   </a>
                 </div>
               </div>
@@ -840,7 +846,10 @@
                     data-gallery="detrasDeCamaraGallery"
                     class="portfolio-lightbox preview-link"
                   >
-                  <img width="100%" height="100%" src="assets/img/testimonios/Sin-título-2-[Recuperado].png" alt="">
+                  <img width="100%" height="100%" 
+                  src="assets/img/testimonios/Sin-título-2-[Recuperado].png" 
+                  class="zoom-imagen"
+                  alt="">
                   </a>
                 </div>
               </div>
