--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -794,9 +794,17 @@
                   class="zoom-imagen" 
                   alt="">
               </a>
-            </div>
-            <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
-            </div>
+          </div>
+          <div data-aos="fade-up" class="col-lg-4 p-5 img-container">
+            <a
+                  href="https://www.youtube.com/embed/R_HynDfavIk?si=2MHO8cKjTUtn12ID"
+                  data-gallery="testimonioGallery"
+                  class="portfolio-lightbox preview-link"
+                >
+                <img src="assets/img/testimonios/Testimonio-Delia.png" 
+                class="zoom-imagen" 
+                alt="">
+            </a>
           </div>
         </div>
       </section>
