--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         </div>
         <div class="container" data-aos="fade-up">
           <div class="testimonios-home-slider swiper">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper behind-cameras-slider">
               <div class="swiper-slide">
                 <div class="behind-cameras-img">
                   <a
