--- a/redes-sociales.html
+++ b/redes-sociales.html
@@ -812,7 +812,7 @@
       <!-- detras de escena -->
       <section id="clients" class="clients">
         <div data-aos="fade-up">
-          <h1 class="titles-h1">
+          <h1 class="titles-h1 espaciado">
             <span class="underline">Detrás de escena</span>
           </h1>
         </div>
